<resources>
    <string name="app_name">Southaven</string>
    <string name="my_card">My E-Card</string>
    <string name="company_code">1</string>
    <string name="image_view">show app icon</string>
    <string name="vip_img">VIP Image view</string>
    <string name="his_text1">Sorry,you have yet to qualify as our VIP Member.</string>
    <string name="his_text2">spend $300 nett in a single receipt from and southaven boutique now &amp; receive 10% off straight away in the same receipt .You will get a VIP E-card &amp;have access to your past transaction!</string>
    <string name="google_maps_key">AIzaSyA9ZXddogVa3SzehWB4l_CIjw9irbuFpQk</string>
    <string name="location_title">Our Boutigues</string>
    <string name="location">Location</string>
    <string name="locat_us">Locate Us</string>
    <string name="register_head">Let us get to know you</string>
    <string name="register_title">Title</string>
    <string name="profile_title">Welcome</string>
    <string name="notification">Notification</string>
    <string name="close">CLOSE</string>

    <string name="card">Card</string>
    <string name="profile">Profile</string>
    <string name="profile_acco">Account</string>
    <string name="about">About</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="title_please_wait">Please Wait</string>
    <string name="contactus">Contact Us</string>
    <string name="mr">Mr/Mrs</string>

    <string name="contacthint">Subject of your message</string>
    <string name="contacthint2">Your message (1000 characters max)</string>
    <string name="contactsend">Send</string>
    <string name="register_btn">REGISTER</string>
    <string name="register_firstname">First Name</string>
    <string name="register_lastname">Last Name</string>
    <string name="register_mobilenum">Mobile Number (e.g.91234567)</string>
    <string name="register_email">Email Address</string>
    <string name="register_password">Password</string>
    <string name="register_conformpassword">Confirm Password</string>
    <string name="register_postalcode">Postal Code</string>
    <string name="register_address"> Address</string>
    <string name="register_login"> Already registered with us?</string>
    <string name="register_dob">Date of Birth in YYYY-MM-DD</string>
    <string name="privacy">Privacy Policy</string>
    <string name="membership">Membership FAQs</string>
    <string name="title_faqs">FAQs</string>
    <string name="Camera">Camera</string>
    <string name="contact_name">ContactName</string>
    <string name="tran_date">TranDate</string>
    <string name="tran_no">TranNo</string>
    <string name="net_total">NetTotal</string>
    <string name="tran_history">Transaction History</string>
    <string name="likenote">Enjoy 10% off all regular-priced items </string>
    <string name="calculatornote">Exclusive access to past transactions </string>
    <string name="vipprivileges">VIP Privileges </string>
    <string name="aboutcontact">Please provide the following information and our representative will get in touch with you as quickly as possible. You can also visit the FAQ section where you can find the list of the most frequently asked questions. </string>
    <string name="abouttext2">In addition, we have accessories to exude the wholesome chic look. Our pleasant environment coupled with friendly dedicated retail executives, makes you shopping at Southaven satisfying and enjoyable </string>
    <string name="abouttext">Software Group is a global technology company specialized in digitalization and integration solutions for financial service providers. We help FSPs successfully go through the process of digital transformation, extend their outreach and improve operational efficiency. We take financial inclusion to heart and have a social mission hardcoded in our DNA - we innovate for a global economy that includes everyone.</string>
    <string name="vipdiscription">Sorry, you have yet to qualify as our VIP Member.</string>
    <string name="vipdiscription2">  Spend $300 nett in a single receipt from any Southaven boutique now &amp; receive 10% off straight away in the same receipt. You will get a VIP E-card &amp; enjoy the following privileges!</string>
    <string name="cartnote">Accumulate 3000 points over a two-year period to renew your vip membership for another two years</string>
    <string name="todo">TODO</string>
    <string name="user_name">User Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_settings">Edit Settings</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="Promotion">Promotions</string>
    <string name="Promotion_llb">Receive news on all upcoming sales!</string>
    <string name="Order">Order Updates</string>
    <string name="Order_llb">Get notifations on your Orders and\nalterations</string>
    <string name="log_out">Logout</string>
    <string name="hint_email">Email / Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="Remember_check">Remember Me</string>
    <string name="btn_register">Register here</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_join">JOIN NOW</string>
    <string name="btn_backlogin">Back to Login</string>
    <string name="btn_forgotpassword">Forgot your password?</string>
    <string name="forgotpassword_llb">Please enter the email address you\'ve \nregistered with us.</string>
    <string name="ok" />
</resources>
