<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_gradient_login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@color/black"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/arrowback_img"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white" />


            <com.thisit.southavencrm.customfonts.TextViewBadScriptRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/register_head"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textStyle="bold|italic" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="5dp">

                <Spinner
                    android:id="@+id/title_spi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/edittext_border_white"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_small" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/firstname_EditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@drawable/edittext_border_white"
                        android:hint="@string/register_firstname"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/Silver_gray"
                        android:textSize="@dimen/textsize_small" />

                    <EditText
                        android:id="@+id/lastname_EditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@drawable/edittext_border_white"
                        android:hint="@string/register_lastname"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/Silver_gray"
                        android:textSize="@dimen/textsize_small" />

                </LinearLayout>

                <EditText
                    android:id="@+id/mobilenum_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_border_white"
                    android:hint="@string/register_mobilenum"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/Silver_gray"
                    android:textSize="@dimen/textsize_small" />

                <EditText
                    android:id="@+id/emailID_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_border_white"
                    android:hint="@string/register_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/Silver_gray"
                    android:textSize="@dimen/textsize_small" />

                <EditText
                    android:id="@+id/password_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_border_white"
                    android:hint="@string/register_password"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/Silver_gray"
                    android:textSize="@dimen/textsize_small" />

                <EditText
                    android:id="@+id/conformpassword_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_border_white"
                    android:hint="@string/register_conformpassword"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/Silver_gray"
                    android:textSize="@dimen/textsize_small" />

                <EditText
                    android:id="@+id/postalcode_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_border_white"
                    android:hint="@string/register_postalcode"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/Silver_gray"
                    android:textSize="@dimen/textsize_small" />

                <EditText
                    android:id="@+id/Address_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_border_white"
                    android:gravity="left|center"
                    android:layout_gravity="left|center"
                    android:hint="Address"
                    android:inputType="textMultiLine"
                    android:minHeight="60dp"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/Silver_gray"
                    android:textSize="@dimen/textsize_small" />


                <EditText
                    android:id="@+id/date_Of_Birth_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_border_white"
                    android:hint="@string/register_dob"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/Silver_gray"
                    android:textSize="@dimen/textsize_small" />

                <Button
                    android:id="@+id/Savebutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/dark_brown"
                    android:padding="15dp"
                    android:text="@string/register_btn"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/register_login"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="Log in"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/dark_brown" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>