<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:ignore="MissingClass">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutcontact"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_small2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/brown"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/mr"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_small" />


        </LinearLayout>

        <TextView
            android:id="@+id/username_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_grayedit"
            android:gravity="left|center"
            android:hint="@string/user_name"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_small"
            android:autofillHints="" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_grayedit"
            android:gravity="left|center"
            android:hint="Email"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_small"
            android:autofillHints="" />

        <TextView
            android:id="@+id/txt_phoneno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_grayedit"
            android:gravity="left|center"
            android:hint="Phone No"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_small"
            android:autofillHints="" />

        <EditText
            android:id="@+id/subjectmessage_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_grayedit"
            android:gravity="left|center"
            android:hint="@string/contacthint"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_small"
            android:autofillHints="" />

        <EditText
            android:id="@+id/message_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_grayedit"
            android:gravity="left|center"
            android:hint="@string/contacthint2"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_small" />

        <Button
            android:id="@+id/Savebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/dark_brown"
            android:padding="15dp"
            android:text="@string/contactsend"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>